--- a/UILayer/Views/MainWindow.xaml
+++ b/UILayer/Views/MainWindow.xaml
@@ -13,7 +13,7 @@
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200"/>
-                <ColumnDefinition/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
             <Grid.RowDefinitions>
@@ -22,7 +22,7 @@
                 <RowDefinition Height="40"/>
                 <RowDefinition Height="130"/>
                 <RowDefinition Height="40"/>
-                <RowDefinition/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
             <Label Content="TourPlanner"
@@ -32,30 +32,36 @@
                    Foreground="White"
                    FontSize="16"/>
 
-            <StackPanel Grid.Row="0" Grid.Column="2" 
-                        Orientation="Horizontal" 
-                        VerticalAlignment="Center" 
-                        HorizontalAlignment="Left">
+            <DockPanel Grid.Row="0" Grid.Column="2" 
+                       VerticalAlignment="Center" 
+                       HorizontalAlignment="Stretch">
                 <RadioButton Content="File"
                              Foreground="White"
-                             FontSize="16"/>
+                             FontSize="16"
+                             Width="100"
+                             HorizontalAlignment="Stretch"/>
                 <RadioButton Content="Edit"
                              Foreground="White"
-                             FontSize="16"/>
+                             FontSize="16"
+                             Width="100"
+                             HorizontalAlignment="Stretch"/>
                 <RadioButton Content="Options"
                              Foreground="White"
-                             FontSize="16"/>
+                             FontSize="16"
+                             Width="120"
+                             HorizontalAlignment="Stretch"/>
                 <RadioButton Content="Help"
                              Foreground="White"
-                             FontSize="16"/>
-            </StackPanel>
+                             FontSize="16"
+                             HorizontalAlignment="Stretch"/>
+            </DockPanel>
 
             <TextBox Grid.Row="1"
                      Grid.ColumnSpan="2"
                      Text="Search" 
                      TextChanged="TextBox_TextChanged"
                      FontSize="16"
-                     Padding="10,0,10,0"
+                     Padding="12,0,10,0"
                      Background="AliceBlue"/>
 
             <Label Grid.Row="2" 
@@ -110,7 +116,8 @@
                         Grid.Column="1"
                         HorizontalAlignment="Right"
                         VerticalAlignment="Center"
-                        Orientation="Horizontal">
+                        Orientation="Horizontal"
+                        Margin="0,0,20,0">
                 <RadioButton Content="+"
                              Foreground="White"
                              FontSize="16"/>
