--- a/UILayer/Views/MainWindow.xaml
+++ b/UILayer/Views/MainWindow.xaml
@@ -3,10 +3,15 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:vm="TourPlanner.UILayer.ViewModels"
         xmlns:local="clr-namespace:TourPlanner"
         mc:Ignorable="d"
         Title="TourPlanner" Height="450" Width="800"
         Background="Transparent">
+
+    <Window.DataContext>
+        
+    </Window.DataContext>
     
     <Border Background="#272537"
             CornerRadius="20">
