--- a/UILayer/Views/MainWindow.xaml
+++ b/UILayer/Views/MainWindow.xaml
@@ -9,10 +9,6 @@
         Title="TourPlanner" Height="450" Width="800"
         Background="Transparent">
 
-    <Window.DataContext>
-        
-    </Window.DataContext>
-    
     <Border Background="#272537"
             CornerRadius="20">
         <Grid>
@@ -83,15 +79,17 @@
                         HorizontalAlignment="Right"
                         VerticalAlignment="Center"
                         Orientation="Horizontal">
-                <RadioButton Content="+"
-                             Foreground="White"
-                             FontSize="16"/>
-                <RadioButton Content="-"
-                             Foreground="White"
-                             FontSize="16"/>
-                <RadioButton Content="..."
-                             Foreground="White"
-                             FontSize="16"/>
+                <Button Content="+"
+                        Foreground="Black"
+                        FontSize="16"
+                        Command="{Binding AddTourCommand}"/>
+                <Button Content="-"
+                        Foreground="Black"
+                        FontSize="16"
+                        Command="{Binding DeleteTourCommand}"/>
+                <Button Content="..."
+                        Foreground="Black"
+                        FontSize="16"/>
             </StackPanel>
 
             <StackPanel Grid.Row="2"
@@ -123,15 +121,15 @@
                         VerticalAlignment="Center"
                         Orientation="Horizontal"
                         Margin="0,0,20,0">
-                <RadioButton Content="+"
-                             Foreground="White"
-                             FontSize="16"/>
-                <RadioButton Content="-"
-                             Foreground="White"
-                             FontSize="16"/>
-                <RadioButton Content="..."
-                             Foreground="White"
-                             FontSize="16"/>
+                <Button Content="+"
+                        Foreground="Black"
+                        FontSize="16"/>
+                <Button Content="-"
+                        Foreground="Black"
+                        FontSize="16"/>
+                <Button Content="..."
+                        Foreground="Black"
+                        FontSize="16"/>
             </StackPanel>
 
         </Grid>
