--- a/UILayer/Views/CreateTour.xaml
+++ b/UILayer/Views/CreateTour.xaml
@@ -5,8 +5,51 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TourPlanner.UILayer.Views"
         mc:Ignorable="d"
-        Title="CreateTour" Height="450" Width="800">
-    <Grid>
+        Title="TourPlanner" Height="550" Width="800"
+        Background="Transparent"
+        WindowStyle="None"
+        WindowStartupLocation="CenterScreen"
+        MouseDown="Window_MouseDown">
+
+    <Border CornerRadius="40">
+        <Border.Background>
+            <ImageBrush ImageSource="/UILayer/Resources/Images/Background.jpeg"/>
+        </Border.Background>
+        <Border CornerRadius="30"
+                BorderThickness="3"
+                Opacity="0.8">
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0,1" EndPoint="1,0">
+                    <GradientStop Color="#150C25" Offset="0"/>
+                    <GradientStop Color="#341D5C" Offset="0.75"/>
+                </LinearGradientBrush>
+            </Border.Background>
         
-    </Grid>
+            <Border.BorderBrush>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                    <GradientStop Color="#462AD8" Offset="0"/>
+                    <GradientStop Color="#DA34AE" Offset="0.75"/>
+                    <GradientStop Color="#8A16C1" Offset="1"/>
+                </LinearGradientBrush>
+            </Border.BorderBrush>
+            
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="30"/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition/>
+                            <ColumnDefinition Width="25"/>
+                            <ColumnDefinition Width="25"/>
+                            <ColumnDefinition Width="5"/>
+                        </Grid.ColumnDefinitions>
+                        
+                    </Grid>
+                </Grid>
+        </Border>
+    </Border>
+
 </Window>
