--- a/UILayer/Views/CreateTour.xaml
+++ b/UILayer/Views/CreateTour.xaml
@@ -1,15 +1,13 @@
-﻿<Window x:Class="TourPlanner.UILayer.Views.CreateTour"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TourPlanner.UILayer.Views"
-        mc:Ignorable="d"
-        Title="TourPlanner" Height="550" Width="800"
-        Background="Transparent"
-        WindowStyle="None"
-        WindowStartupLocation="CenterScreen"
-        MouseDown="Window_MouseDown">
+﻿<Page x:Class="TourPlanner.UILayer.Views.CreateTour"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:TourPlanner.UILayer.Views"
+      mc:Ignorable="d" 
+      d:DesignHeight="450" d:DesignWidth="800"
+      Title="TourPlanner" Height="550" Width="800"
+      Background="Transparent">
 
     <Border CornerRadius="40">
         <Border.Background>
@@ -24,7 +22,7 @@
                     <GradientStop Color="#341D5C" Offset="0.75"/>
                 </LinearGradientBrush>
             </Border.Background>
-        
+
             <Border.BorderBrush>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
                     <GradientStop Color="#462AD8" Offset="0"/>
@@ -32,24 +30,272 @@
                     <GradientStop Color="#8A16C1" Offset="1"/>
                 </LinearGradientBrush>
             </Border.BorderBrush>
-            
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="30"/>
-                        <RowDefinition/>
-                    </Grid.RowDefinitions>
 
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition Width="25"/>
-                            <ColumnDefinition Width="25"/>
-                            <ColumnDefinition Width="5"/>
-                        </Grid.ColumnDefinitions>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition Width="25"/>
+                        <ColumnDefinition Width="25"/>
+                        <ColumnDefinition Width="10"/>
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock Grid.Column="0" Text="Create Tour"
+                               Foreground="AliceBlue"
+                               FontSize="15"
+                               FontFamily="Dubai"
+                               VerticalAlignment="Center"
+                               Margin="15,0,0,0"/>
+
+                    <Button Grid.Column="1"
+                            x:Name="buttonMinimize"
+                            Background="#28AEED"
+                            BorderThickness="0"
+                            Content="-"
+                            Foreground="White"
+                            FontSize="15"
+                            Cursor="Hand">
                         
-                    </Grid>
+                        <Button.Style>
+                            <Style TargetType="Button">
+                                <Setter Property="Background" Value="#28AEED"/>
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="#278BEF"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Button.Style>
+                        
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <Border Width="18" Height="18"
+                                        CornerRadius="9"
+                                        Background="{TemplateBinding Background}">
+                                    <ContentPresenter VerticalAlignment="Center"
+                                                      HorizontalAlignment="Center"/>
+                                </Border>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
+
+
+                    <Button Grid.Column="2"
+                            x:Name="buttonClose"
+                            Background="#DA34AE"
+                            BorderThickness="0"
+                            Content="X"
+                            Foreground="White"
+                            FontSize="12"
+                            Cursor="Hand"
+                            VerticalContentAlignment="Center">
+                        <Button.Style>
+                            <Style TargetType="Button">
+                                <Setter Property="Background" Value="#28AEED"/>
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="#278BEF"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Button.Style>
+
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <Border Width="18" Height="18"
+                                        CornerRadius="9"
+                                        Background="{TemplateBinding Background}">
+                                    <ContentPresenter VerticalAlignment="Center"
+                                                      HorizontalAlignment="Center"/>
+                                </Border>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
                 </Grid>
+
+                <StackPanel Grid.Row="1"
+                            Width="250"
+                            Orientation="Vertical"
+                            Margin="0,10,0,0">
+
+                    <TextBlock Text="Create a new Tour"
+                               Foreground="White"
+                               FontSize="20"
+                               FontFamily="Dubai"
+                               FontWeight="Medium"
+                               HorizontalAlignment="Center"
+                               Margin="0,5,0,0"/>
+
+                    <TextBlock Text="Name"
+                               Foreground="White"
+                               FontFamily="Dubai"
+                               FontSize="12"
+                               FontWeight="Medium"
+                               Margin="0,10,0,0"/>
+
+                    <TextBox x:Name="name"
+                             FontSize="13"
+                             FontFamily="Dubai"
+                             FontWeight="Medium"
+                             Background="Transparent"
+                             Foreground="White"
+                             CaretBrush="LightGray"
+                             BorderBrush="DarkGray"
+                             BorderThickness="0,0,0,1"
+                             Height="28"
+                             VerticalContentAlignment="Center"
+                             Margin="0,2,0,0"/>
+
+                    <TextBlock Text="Date"
+                               Foreground="White"
+                               FontFamily="Dubai"
+                               FontSize="12"
+                               FontWeight="Medium"
+                               Margin="0,8,0,0"/>
+
+                    <TextBox x:Name="date"
+                             FontSize="13"
+                             FontFamily="Dubai"
+                             FontWeight="Medium"
+                             Background="Transparent"
+                             Foreground="White"
+                             CaretBrush="LightGray"
+                             BorderBrush="DarkGray"
+                             BorderThickness="0,0,0,1"
+                             Height="28"
+                             VerticalContentAlignment="Center"
+                             Margin="0,2,0,0"/>
+
+                    <TextBlock Text="Description"
+                               FontFamily="Dubai"
+                               Foreground="White"
+                               FontSize="12"
+                               FontWeight="Medium"
+                               Margin="0,8,0,0"/>
+
+                    <TextBox x:Name="Description"
+                             FontSize="13"
+                             FontFamily="Dubai"
+                             FontWeight="Medium"
+                             Background="Transparent"
+                             Foreground="White"
+                             CaretBrush="LightGray"
+                             BorderBrush="DarkGray"
+                             BorderThickness="0,0,0,1"
+                             Height="28"
+                             VerticalContentAlignment="Center"
+                             Margin="0,2,0,0"/>
+
+                    <TextBlock Text="From"
+                               Foreground="White"
+                               FontFamily="Dubai"
+                               FontSize="12"
+                               FontWeight="Medium"
+                               Margin="0,8,0,0"/>
+
+                    <TextBox x:Name="from"
+                             FontSize="13"
+                             FontFamily="Dubai"
+                             FontWeight="Medium"
+                             Background="Transparent"
+                             Foreground="White"
+                             CaretBrush="LightGray"
+                             BorderBrush="DarkGray"
+                             BorderThickness="0,0,0,1"
+                             Height="28"
+                             VerticalContentAlignment="Center"
+                             Margin="0,2,0,0"/>
+
+                    <TextBlock Text="To"
+                               Foreground="White"
+                               FontFamily="Dubai"
+                               FontSize="12"
+                               FontWeight="Medium"
+                               Margin="0,8,0,0"/>
+
+                    <TextBox x:Name="To"
+                             FontFamily="Dubai"
+                             FontSize="13"
+                             FontWeight="Medium"
+                             Background="Transparent"
+                             Foreground="White"
+                             CaretBrush="LightGray"
+                             BorderBrush="DarkGray"
+                             BorderThickness="0,0,0,1"
+                             Height="28"
+                             VerticalContentAlignment="Center"
+                             Margin="0,2,0,0"/>
+
+                    <TextBlock Text="Transport Type"
+                               FontFamily="Dubai"
+                               Foreground="White"
+                               FontSize="12"
+                               FontWeight="Medium"
+                               Margin="0,8,0,0"/>
+
+                    <TextBox x:Name="transporttype"
+                             FontFamily="Dubai"
+                             FontSize="13"
+                             FontWeight="Medium"
+                             Background="Transparent"
+                             Foreground="White"
+                             CaretBrush="LightGray"
+                             BorderBrush="DarkGray"
+                             BorderThickness="0,0,0,1"
+                             Height="28"
+                             VerticalContentAlignment="Center"
+                             Margin="0,2,0,0"/>
+                </StackPanel>
+
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="200"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Button Grid.Column="2"
+                            x:Name="buttonSubmit"
+                            Background="#DA34AE"
+                            BorderThickness="0"
+                            Content="Create Tour"
+                            Foreground="White"
+                            FontFamily="Dubai"
+                            FontSize="16"
+                            Cursor="Hand"
+                            VerticalAlignment="Bottom"
+                            Margin="0,0,0,25"
+                            VerticalContentAlignment="Center">
+                        
+                        <Button.Style>
+                            <Style TargetType="Button">
+                                <Setter Property="Background" Value="#28AEED"/>
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="#278BEF"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Button.Style>
+
+                        <Button.Template>
+                            <ControlTemplate TargetType="Button">
+                                <Border Width="120" Height="40"
+                                        CornerRadius="20"
+                                        Background="{TemplateBinding Background}">
+                                    <ContentPresenter VerticalAlignment="Center"
+                                                      HorizontalAlignment="Center"/>
+                                </Border>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
+                </Grid>
+
+            </Grid>
         </Border>
     </Border>
-
-</Window>
+</Page>
