--- a/UILayer/Views/CreateTourLog.xaml
+++ b/UILayer/Views/CreateTourLog.xaml
@@ -1,12 +1,14 @@
-﻿<Window x:Class="TourPlanner.UILayer.Views.CreateTourLog"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TourPlanner.UILayer.Views"
-        mc:Ignorable="d"
-        Title="CreateTourLog" Height="450" Width="800">
+﻿<Page x:Class="TourPlanner.UILayer.Views.CreateTourLog"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:TourPlanner.UILayer.Views"
+      mc:Ignorable="d" 
+      d:DesignHeight="450" d:DesignWidth="800"
+      Title="CreateTourLog">
+
     <Grid>
         
     </Grid>
-</Window>
+</Page>
