--- a/UILayer/Views/CreateTour.xaml
+++ b/UILayer/Views/CreateTour.xaml
@@ -9,13 +9,13 @@
       Title="TourPlanner" Height="550" Width="800"
       Background="Transparent">
 
-    <Border CornerRadius="40">
+    <Border CornerRadius="12">
         <Border.Background>
             <ImageBrush ImageSource="/UILayer/Resources/Images/Background.jpeg"/>
         </Border.Background>
-        <Border CornerRadius="30"
-                BorderThickness="3"
-                Opacity="0.8">
+        <Border CornerRadius="10"
+                BorderThickness="2"
+                Opacity="0.92">
             <Border.Background>
                 <LinearGradientBrush StartPoint="0,1" EndPoint="1,0">
                     <GradientStop Color="#150C25" Offset="0"/>
@@ -42,19 +42,19 @@
                         <ColumnDefinition/>
                         <ColumnDefinition Width="25"/>
                         <ColumnDefinition Width="25"/>
-                        <ColumnDefinition Width="10"/>
+                        <ColumnDefinition Width="5"/>
                     </Grid.ColumnDefinitions>
 
-                    <TextBlock Grid.Column="0" Text="Create Tour"
-                               Foreground="AliceBlue"
-                               FontSize="15"
+                    <TextBlock Grid.Column="0" 
+                               Text="TourPlanner"
+                               Foreground="LightCyan"
+                               FontSize="16"
                                FontFamily="Dubai"
                                VerticalAlignment="Center"
-                               Margin="15,0,0,0"/>
+                               Margin="10,0,0,0"/>
 
                     <Button Grid.Column="1"
                             x:Name="buttonMinimize"
-                            Background="#28AEED"
                             BorderThickness="0"
                             Content="-"
                             Foreground="White"
@@ -74,8 +74,8 @@
                         
                         <Button.Template>
                             <ControlTemplate TargetType="Button">
-                                <Border Width="18" Height="18"
-                                        CornerRadius="9"
+                                <Border Width="20" Height="20"
+                                        CornerRadius="10"
                                         Background="{TemplateBinding Background}">
                                     <ContentPresenter VerticalAlignment="Center"
                                                       HorizontalAlignment="Center"/>
@@ -87,7 +87,6 @@
 
                     <Button Grid.Column="2"
                             x:Name="buttonClose"
-                            Background="#DA34AE"
                             BorderThickness="0"
                             Content="X"
                             Foreground="White"
@@ -96,10 +95,10 @@
                             VerticalContentAlignment="Center">
                         <Button.Style>
                             <Style TargetType="Button">
-                                <Setter Property="Background" Value="#28AEED"/>
+                                <Setter Property="Background" Value="#DA34AE"/>
                                 <Style.Triggers>
                                     <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="Background" Value="#278BEF"/>
+                                        <Setter Property="Background" Value="#C62DAE"/>
                                     </Trigger>
                                 </Style.Triggers>
                             </Style>
@@ -107,8 +106,8 @@
 
                         <Button.Template>
                             <ControlTemplate TargetType="Button">
-                                <Border Width="18" Height="18"
-                                        CornerRadius="9"
+                                <Border Width="20" Height="20"
+                                        CornerRadius="10"
                                         Background="{TemplateBinding Background}">
                                     <ContentPresenter VerticalAlignment="Center"
                                                       HorizontalAlignment="Center"/>
@@ -121,7 +120,7 @@
                 <StackPanel Grid.Row="1"
                             Width="250"
                             Orientation="Vertical"
-                            Margin="0,10,0,0">
+                            Margin="0,5,0,0">
 
                     <TextBlock Text="Create a new Tour"
                                Foreground="White"
@@ -218,7 +217,7 @@
                                FontWeight="Medium"
                                Margin="0,8,0,0"/>
 
-                    <TextBox x:Name="To"
+                    <TextBox x:Name="to"
                              FontFamily="Dubai"
                              FontSize="13"
                              FontWeight="Medium"
@@ -260,7 +259,6 @@
 
                     <Button Grid.Column="2"
                             x:Name="buttonSubmit"
-                            Background="#DA34AE"
                             BorderThickness="0"
                             Content="Create Tour"
                             Foreground="White"
@@ -273,10 +271,10 @@
                         
                         <Button.Style>
                             <Style TargetType="Button">
-                                <Setter Property="Background" Value="#28AEED"/>
+                                <Setter Property="Background" Value="#DA34AE"/>
                                 <Style.Triggers>
                                     <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="Background" Value="#278BEF"/>
+                                        <Setter Property="Background" Value="#C62DAE"/>
                                     </Trigger>
                                 </Style.Triggers>
                             </Style>
