--- a/UILayer/Views/CreateTour.xaml
+++ b/UILayer/Views/CreateTour.xaml
@@ -130,7 +130,7 @@
                                HorizontalAlignment="Center"
                                Margin="0,5,0,0"/>
 
-                    <TextBlock Text="Name"
+                    <TextBlock Text="Tour Name"
                                Foreground="White"
                                FontFamily="Dubai"
                                FontSize="12"
@@ -188,42 +188,6 @@
                              VerticalContentAlignment="Center"
                              Margin="0,2,0,0"/>
 
-                    <TextBlock Text="From"
-                               Foreground="White"
-                               FontFamily="Dubai"
-                               FontSize="12"
-                               FontWeight="Medium"
-                               Margin="0,8,0,0"/>
-
-                    <DatePicker x:Name="from"
-                                FontSize="13"
-                                FontFamily="Dubai"
-                                FontWeight="Medium"
-                                Foreground="White"
-                                BorderBrush="DarkGray"
-                                BorderThickness="0,0,0,1"
-                                Height="28"
-                                VerticalContentAlignment="Center"
-                                Margin="0,2,0,0"/>
-
-                    <TextBlock Text="To"
-                               Foreground="White"
-                               FontFamily="Dubai"
-                               FontSize="12"
-                               FontWeight="Medium"
-                               Margin="0,8,0,0"/>
-
-                    <DatePicker x:Name="to"
-                                FontSize="13"
-                                FontFamily="Dubai"
-                                FontWeight="Medium"
-                                Foreground="White"
-                                BorderBrush="DarkGray"
-                                BorderThickness="0,0,0,1"
-                                Height="28"
-                                VerticalContentAlignment="Center"
-                                Margin="0,2,0,0"/>
-
                     <TextBlock Text="Transport Type"
                                FontFamily="Dubai"
                                Foreground="White"
@@ -231,9 +195,51 @@
                                FontWeight="Medium"
                                Margin="0,8,0,0"/>
 
-                    <TextBox x:Name="transporttype"
+                    <ComboBox x:Name="transporttype"
                              FontFamily="Dubai"
                              FontSize="13"
+                             FontWeight="Medium"
+                             Foreground="White"
+                             BorderBrush="DarkGray"
+                             BorderThickness="0,0,0,1"
+                             Height="28"
+                             VerticalContentAlignment="Center"
+                             Margin="0,2,0,0">
+                        <ComboBoxItem Content="Train"/>
+                        <ComboBoxItem Content="Plane"/>
+                        <ComboBoxItem Content="Bus"/>
+                    </ComboBox>
+
+                    <TextBlock Text="From"
+                               Foreground="White"
+                               FontFamily="Dubai"
+                               FontSize="12"
+                               FontWeight="Medium"
+                               Margin="0,8,0,0"/>
+
+                    <TextBox x:Name="from"
+                             FontSize="13"
+                             FontFamily="Dubai"
+                             FontWeight="Medium"
+                             Background="Transparent"
+                             Foreground="White"
+                             CaretBrush="LightGray"
+                             BorderBrush="DarkGray"
+                             BorderThickness="0,0,0,1"
+                             Height="28"
+                             VerticalContentAlignment="Center"
+                             Margin="0,2,0,0"/>
+
+                    <TextBlock Text="To"
+                               FontFamily="Dubai"
+                               Foreground="White"
+                               FontSize="12"
+                               FontWeight="Medium"
+                               Margin="0,8,0,0"/>
+
+                    <TextBox x:Name="to"
+                             FontSize="13"
+                             FontFamily="Dubai"
                              FontWeight="Medium"
                              Background="Transparent"
                              Foreground="White"
