--- a/UILayer/Views/MainWindow.xaml
+++ b/UILayer/Views/MainWindow.xaml
@@ -9,6 +9,7 @@
         mc:Ignorable="d"
         Title="TourPlanner" Height="550" Width="800"
         Background="Transparent"
+        AllowsTransparency="True"
         WindowStyle="None"
         WindowStartupLocation="CenterScreen"
         MouseDown="Window_MouseDown"
@@ -70,7 +71,8 @@
                             Content="-"
                             Foreground="White"
                             FontSize="15"
-                            Cursor="Hand">
+                            Cursor="Hand"
+                            Click="buttonMinimize_Click">
 
                         <Button.Style>
                             <Style TargetType="Button">
@@ -102,7 +104,7 @@
                             Foreground="White"
                             FontSize="12"
                             Cursor="Hand"
-                            VerticalContentAlignment="Center">
+                            Click="buttonClose_Click">
                         <Button.Style>
                             <Style TargetType="Button">
                                 <Setter Property="Background" Value="#DA34AE"/>
