--- a/UILayer/Views/MainWindow.xaml
+++ b/UILayer/Views/MainWindow.xaml
@@ -4,7 +4,6 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:vm="TourPlanner.UILayer.ViewModels"
-        xmlns:local="clr-namespace:TourPlanner"
         xmlns:views="clr-namespace:TourPlanner.UILayer.Views"
         mc:Ignorable="d"
         Title="TourPlanner" Height="550" Width="800"
@@ -17,28 +16,29 @@
     
     <Border CornerRadius="12">
         <Border.Background>
-            <ImageBrush ImageSource="/UILayer/Resources/Images/Background.jpeg"/>
+            <ImageBrush ImageSource="/UILayer/Resources/Images/Background.jpg"/>
         </Border.Background>
         <Border CornerRadius="10"
                 BorderThickness="2"
-                Opacity="0.92">
+                Opacity="0.85">
 
             <Border.Background>
-                <LinearGradientBrush StartPoint="0,1" EndPoint="1,0">
-                    <GradientStop Color="#150C25" Offset="0"/>
-                    <GradientStop Color="#341D5C" Offset="0.75"/>
+                <LinearGradientBrush StartPoint="1,1" EndPoint="1,0">
+                    <GradientStop Color="#1D2E28" Offset="0"/>
+                    <GradientStop Color="#234F1E" Offset="0.75"/>
                 </LinearGradientBrush>
             </Border.Background>
 
             <Border.BorderBrush>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
-                    <GradientStop Color="#462AD8" Offset="0"/>
-                    <GradientStop Color="#DA34AE" Offset="0.75"/>
-                    <GradientStop Color="#8A16C1" Offset="1"/>
+                    <GradientStop Color="#378805" Offset="0"/>
+                    <GradientStop Color="#86DC3D" Offset="0.75"/>
+                    <GradientStop Color="#C5E90B" Offset="1"/>
                 </LinearGradientBrush>
             </Border.BorderBrush>
 
             <Grid>
+                                
                 <Grid.RowDefinitions>
                     <RowDefinition Height="30"/>
                     <RowDefinition Height="*"/>
@@ -56,6 +56,8 @@
                         <ColumnDefinition Width="25"/>
                         <ColumnDefinition Width="5"/>
                     </Grid.ColumnDefinitions>
+
+                    <ContentControl x:Name="MainContent"/>
 
                     <TextBlock Grid.Column="0" 
                                Text="TourPlanner"
@@ -76,10 +78,10 @@
 
                         <Button.Style>
                             <Style TargetType="Button">
-                                <Setter Property="Background" Value="#28AEED"/>
+                                <Setter Property="Background" Value="#86DC3D"/>
                                 <Style.Triggers>
                                     <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="Background" Value="#278BEF"/>
+                                        <Setter Property="Background" Value="#86DC3D"/>
                                     </Trigger>
                                 </Style.Triggers>
                             </Style>
@@ -107,10 +109,10 @@
                             Click="buttonClose_Click">
                         <Button.Style>
                             <Style TargetType="Button">
-                                <Setter Property="Background" Value="#DA34AE"/>
+                                <Setter Property="Background" Value="#86DC3D"/>
                                 <Style.Triggers>
                                     <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="Background" Value="#C62DAE"/>
+                                        <Setter Property="Background" Value="#86DC3D"/>
                                     </Trigger>
                                 </Style.Triggers>
                             </Style>
@@ -166,45 +168,13 @@
 
                     <Grid>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="30"/>
-                            <RowDefinition Height="30"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
 
-                        <TextBlock Grid.Row="0" 
-                                   Text="Tours"
-                                   Margin="10,0,0,0"
-                                   Foreground="White"
-                                   FontSize="16"
-                                   FontFamily="Dubai"
-                                   VerticalAlignment="Center"
-                                   HorizontalAlignment="Left"/>
-
-                        <StackPanel Grid.Row="0"
-                                    Grid.Column="0"
-                                    HorizontalAlignment="Right"
-                                    VerticalAlignment="Center"
-                                    Orientation="Horizontal">
-                                    <Button Content="+"
-                                    Foreground="Black"
-                                    FontSize="16"
-                                    Command="{Binding AddTourCommand}"/>
-                                    <Button Content="-"
-                                    Foreground="Black"
-                                    FontSize="16"
-                                    Command="{Binding DeleteTourCommand}"/>
-                                    <Button Content="..."
-                                    Foreground="Black"
-                                    FontSize="16"/>
-                        </StackPanel>
-
-                        <TextBox Grid.Row="1"
-                         Grid.Column="0"
-                         Text="Search" 
-                         TextChanged="TextBox_TextChanged"
-                         FontSize="16"
-                         Padding="12,0,10,0"
-                         Background="AliceBlue"/>
+                        <views:TourManagement Grid.Row="0"/>
+                        <views:SearchBar Grid.Row="1"/>
 
                     </Grid>
 
@@ -216,46 +186,10 @@
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
 
-                        <StackPanel Grid.Row="0"
-                                    Orientation="Horizontal"
-                                    VerticalAlignment="Center">
-                            <RadioButton Content="General"
-                                         Foreground="White"
-                                         FontSize="16"/>
-                            <RadioButton Content="Route"
-                                         Foreground="White"
-                                         FontSize="16"/>
-                            <RadioButton Content="Misc"
-                                         Foreground="White"
-                                         FontSize="16"/>
-                        </StackPanel>
+                        <views:TourNavbar Grid.Row="0"/>
 
-                        <TextBlock Grid.Row="2" 
-                                   Text="Tour Logs"
-                                   Margin="10,0,0,0"
-                                   Foreground="White"
-                                   FontSize="16"
-                                   FontFamily="Dubai"
-                                   VerticalAlignment="Center"
-                                   HorizontalAlignment="Left"/>
+                        <views:TourLogsManagement Grid.Row="2"/>
 
-                        <StackPanel Grid.Row="2"
-                                    Grid.Column="1"
-                                    HorizontalAlignment="Right"
-                                    VerticalAlignment="Center"
-                                    Orientation="Horizontal"
-                                    Margin="0,0,20,0">
-                                    <Button Content="+"
-                                    Foreground="Black"
-                                    FontSize="16"/>
-                                    <Button Content="-"
-                                    Foreground="Black"
-                                    FontSize="16"/>
-                                    <Button Content="..."
-                                    Foreground="Black"
-                                    FontSize="16"/>
-                        </StackPanel>
-                        
                     </Grid>
                 </Grid>
             </Grid>
