--- a/UILayer/Views/TourList.xaml
+++ b/UILayer/Views/TourList.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="TourPlanner.UILayer.Views.TourListSubView"
+﻿<UserControl x:Class="TourPlanner.UILayer.Views.TourList"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
