Added Navigation to Create Tour

--- a/UILayer/Views/TourManagement.xaml
+++ b/UILayer/Views/TourManagement.xaml
@@ -26,7 +26,7 @@
                     FontSize="18"
                     MinWidth="30"
                     VerticalContentAlignment="Center"
-                    Command="{Binding CreateTourCommand}"/>
+                    Command="{Binding DataContext.ShowCreateTourCommand, RelativeSource={RelativeSource AncestorType=Window}}"/>
             <Button Content="-"
                     Foreground="Black"
                     MinWidth="30"
