--- a/UILayer/Views/MainWindow.xaml
+++ b/UILayer/Views/MainWindow.xaml
@@ -57,8 +57,6 @@
                         <ColumnDefinition Width="5"/>
                     </Grid.ColumnDefinitions>
 
-                    <ContentControl x:Name="MainContent"/>
-
                     <TextBlock Grid.Column="0" 
                                Text="TourPlanner"
                                Foreground="LightCyan"
@@ -160,38 +158,7 @@
                 </Grid>
 
                 <Grid Grid.Row="1">
-
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="250"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-
-                        <views:TourManagement Grid.Row="0"/>
-                        <views:SearchBar Grid.Row="1"/>
-                        <views:TourList Grid.Row="2"/>
-
-                    </Grid>
-
-                    <Grid Grid.Column="1">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="30"/>
-                            <RowDefinition Height="230"/>
-                            <RowDefinition Height="30"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-
-                        <views:TourNavbar Grid.Row="0"/>
-
-                        <views:TourLogsManagement Grid.Row="2"/>
-
-                    </Grid>
+                    <ContentControl Content="{Binding CurrentView}"/>
                 </Grid>
             </Grid>
         </Border>
