--- a/UILayer/Views/CreateTourLog.xaml
+++ b/UILayer/Views/CreateTourLog.xaml
@@ -1,14 +1,227 @@
-﻿<Page x:Class="TourPlanner.UILayer.Views.CreateTourLog"
+﻿<UserControl x:Class="TourPlanner.UILayer.Views.CreateTourLog"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:TourPlanner.UILayer.Views"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="CreateTourLog">
+             d:DesignHeight="600" d:DesignWidth="400"
+             Background="#1E4620">
+    <Grid Margin="20">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
 
-    <Grid>
-        
+        <TextBlock Text="Create Tour Log"
+                  Foreground="White"
+                  FontSize="24"
+                  FontFamily="Dubai"
+                  FontWeight="Bold"
+                  Margin="0,0,0,20"/>
+
+        <!-- Date -->
+        <Grid Grid.Row="1" Margin="0,0,0,10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="120"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Text="Date"
+                      Foreground="White"
+                      FontFamily="Dubai"
+                      FontSize="14"
+                      VerticalAlignment="Center"/>
+            <DatePicker Grid.Column="1"
+                       SelectedDate="{Binding Date}"
+                       FontFamily="Dubai"
+                       FontSize="14"/>
+        </Grid>
+
+        <!-- Comment -->
+        <Grid Grid.Row="2" Margin="0,0,0,10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="120"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Text="Comment"
+                      Foreground="White"
+                      FontFamily="Dubai"
+                      FontSize="14"
+                      VerticalAlignment="Top"
+                      Margin="0,5,0,0"/>
+            <TextBox Grid.Column="1"
+                     Text="{Binding Comment, UpdateSourceTrigger=PropertyChanged}"
+                     FontFamily="Dubai"
+                     FontSize="14"
+                     Background="#2E5E2E"
+                     Foreground="White"
+                     BorderBrush="Gray"
+                     TextWrapping="Wrap"
+                     AcceptsReturn="True"
+                     Height="80"
+                     VerticalScrollBarVisibility="Auto"/>
+        </Grid>
+
+        <!-- Difficulty -->
+        <Grid Grid.Row="3" Margin="0,0,0,10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="120"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="50"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Text="Difficulty"
+                      Foreground="White"
+                      FontFamily="Dubai"
+                      FontSize="14"
+                      VerticalAlignment="Center"/>
+            <Slider Grid.Column="1"
+                    Value="{Binding Difficulty}"
+                    Minimum="1"
+                    Maximum="5"
+                    IsSnapToTickEnabled="True"
+                    TickFrequency="1"
+                    VerticalAlignment="Center"/>
+            <TextBlock Grid.Column="2"
+                      Text="{Binding Difficulty, StringFormat=F0}"
+                      Foreground="White"
+                      FontFamily="Dubai"
+                      FontSize="14"
+                      VerticalAlignment="Center"
+                      HorizontalAlignment="Center"/>
+        </Grid>
+
+        <!-- Rating -->
+        <Grid Grid.Row="4" Margin="0,0,0,10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="120"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="50"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Text="Rating"
+                      Foreground="White"
+                      FontFamily="Dubai"
+                      FontSize="14"
+                      VerticalAlignment="Center"/>
+            <Slider Grid.Column="1"
+                    Value="{Binding Rating}"
+                    Minimum="1"
+                    Maximum="5"
+                    IsSnapToTickEnabled="True"
+                    TickFrequency="1"
+                    VerticalAlignment="Center"/>
+            <TextBlock Grid.Column="2"
+                      Text="{Binding Rating, StringFormat=F0}"
+                      Foreground="White"
+                      FontFamily="Dubai"
+                      FontSize="14"
+                      VerticalAlignment="Center"
+                      HorizontalAlignment="Center"/>
+        </Grid>
+
+        <!-- Total Distance -->
+        <Grid Grid.Row="5" Margin="0,0,0,10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="120"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Text="Total Distance"
+                      Foreground="White"
+                      FontFamily="Dubai"
+                      FontSize="14"
+                      VerticalAlignment="Center"/>
+            <Grid Grid.Column="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <TextBox Text="{Binding TotalDistance, UpdateSourceTrigger=PropertyChanged}"
+                         FontFamily="Dubai"
+                         FontSize="14"
+                         Background="#2E5E2E"
+                         Foreground="White"
+                         BorderBrush="Gray"/>
+                <TextBlock Grid.Column="1"
+                          Text="km"
+                          Foreground="White"
+                          FontFamily="Dubai"
+                          FontSize="14"
+                          Margin="5,0,0,0"/>
+            </Grid>
+        </Grid>
+
+        <!-- Total Time -->
+        <Grid Grid.Row="6" Margin="0,0,0,10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="120"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Text="Total Time"
+                      Foreground="White"
+                      FontFamily="Dubai"
+                      FontSize="14"
+                      VerticalAlignment="Center"/>
+            <Grid Grid.Column="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <TextBox Text="{Binding Hours, UpdateSourceTrigger=PropertyChanged}"
+                         FontFamily="Dubai"
+                         FontSize="14"
+                         Background="#2E5E2E"
+                         Foreground="White"
+                         BorderBrush="Gray"/>
+                <TextBlock Grid.Column="1"
+                          Text="h"
+                          Foreground="White"
+                          FontFamily="Dubai"
+                          FontSize="14"
+                          Margin="5,0"/>
+                <TextBox Grid.Column="2"
+                         Text="{Binding Minutes, UpdateSourceTrigger=PropertyChanged}"
+                         FontFamily="Dubai"
+                         FontSize="14"
+                         Background="#2E5E2E"
+                         Foreground="White"
+                         BorderBrush="Gray"/>
+                <TextBlock Grid.Column="3"
+                          Text="m"
+                          Foreground="White"
+                          FontFamily="Dubai"
+                          FontSize="14"
+                          Margin="5,0,0,0"/>
+            </Grid>
+        </Grid>
+
+        <!-- Buttons -->
+        <StackPanel Grid.Row="8"
+                    Orientation="Horizontal"
+                    HorizontalAlignment="Right"
+                    Margin="0,20,0,0">
+            <Button Content="Cancel"
+                    Command="{Binding CancelCommand}"
+                    Width="100"
+                    Height="30"
+                    Margin="0,0,10,0"
+                    Background="#2E5E2E"
+                    Foreground="White"
+                    BorderBrush="Gray"/>
+            <Button Content="Create"
+                    Command="{Binding CreateCommand}"
+                    Width="100"
+                    Height="30"
+                    Background="#2E5E2E"
+                    Foreground="White"
+                    BorderBrush="Gray"/>
+        </StackPanel>
     </Grid>
-</Page>
+</UserControl>
