--- a/UILayer/Views/TourList.xaml
+++ b/UILayer/Views/TourList.xaml
@@ -5,16 +5,33 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TourPlanner.UILayer.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="400" d:DesignWidth="200">
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <ListView VerticalAlignment="Stretch"
-                  HorizontalAlignment="Stretch"
-                  ItemsSource="{Binding Tours}">
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn DisplayMemberBinding="{Binding Name}"/>
-                </GridView>
-            </ListView.View>
+        <ListView ItemsSource="{Binding Tours}"
+                  SelectedItem="{Binding SelectedTour, Mode=TwoWay}" 
+                  Background="Transparent"
+                  BorderThickness="0">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name}"
+                             Foreground="White"
+                             FontFamily="Dubai"
+                             FontSize="14"/>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <Setter Property="Background" Value="Transparent"/>
+                    <Style.Triggers>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter Property="Background" Value="#2E5E2E"/>
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="#2E5E2E"/>
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </ListView.ItemContainerStyle>
         </ListView>
     </Grid>
 </UserControl>
